# otus_ffi

dart/00.dart_ffi/: README.md
dart/00.dart_ffi/ffi_c/: sum  sum.c
dart/00.dart_ffi/lib/: dart_sandbox.dart
dart/00.dart_ffi/test/: dart_sandbox_test.dart
dart/01.dart_ffigen/: analysis_options.yaml  ffigen.yaml  pubspec.yaml
dart/01.dart_ffigen/lib/: dart_sandbox.dart  sum_bindings.dart
dart/01.dart_ffigen/test/: dart_sandbox_test.dart
dart/02.dart_string/: analysis_options.yaml  ffigen.yaml
dart/02.dart_string/ffi_c/: lib  lib.c  lib.h
dart/02.dart_string/lib/: dart_sandbox.dart  lib_bindings.dart
dart/02.dart_string/test/: dart_sandbox_test.dart
dart/03.dart_makefile/: Makefile  analysis_options.yaml
dart/03.dart_makefile/ffi_c/: lib  lib.c  lib.h
dart/03.dart_makefile/lib/: dart_sandbox.dart  lib_bindings.dart
dart/04.dart_bash/: Makefile
dart/04.dart_bash/lib/: dart_sandbox.dart
dart/05.dart_go/: Makefile  ffigen.yaml  pubspec.yaml
dart/06.dart_path/: Makefile
dart/07.dart_path/: pubspec.yaml
flutter/00.flutter_ffi/: Makefile  ffigen.yaml  pubspec.yaml
flutter/01.flutter_rust_image_processing/: pubspec.yaml
flutter/02.flutter_rust_encoding/: Makefile  ffigen.yaml  pubspec.yaml
flutter/03.flutter_rust_python/: Makefile  README.md
flutter/03.flutter_rust_python/ffi_rust/: Cargo.toml  cbindgen.toml  lib.h
flutter/03.flutter_rust_python/ffi_rust/src/: lib.rs
flutter/04.flutter_go_server/: Makefile  analysis_options.yaml  ffigen.yaml
flutter_sandbox/: analysis_options.yaml  ffigen.yaml  pubspec.yaml
(+65 files in other folders)
