[package]
name = "ffi_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.25", optional = true }
pyo3-async-runtimes = { version = "0.25", optional = true, features = [
    "attributes",
    "async-std-runtime",
] }
async-std = { version = "1.13", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
pyo3 = { version = "0.25", features = ["auto-initialize"] }
pyo3-async-runtimes = { version = "0.25", features = [
    "attributes",
    "async-std-runtime",
] }
async-std = "1.13"

[dev-dependencies]
cbindgen = "0.29.0"
